# Ramus

./: .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md
.github/workflows/: linux.yml  windows.yml
Assets/Materials/Schemas/: material.schema.json
Assets/Materials/Templates/: TexturedQuad_Template.mat
Documentation/: .readthedocs.yaml
Documentation/source/: conf.py  index.rst
Samples/: GreenhouseApp.cpp
Samples/Greenhouse/: GreenhouseApp.cpp
Samples/Greenhouse/Assets/Materials/: UncutGrass.mat
Samples/Greenhouse/Assets/Models/quixel/uncut_grass/: uncut_grass_2k.gltf
Source/include/Ramus/: Common.hpp
Source/include/Ramus/Assets/: Asset.hpp  AssetLoadContext.hpp  AssetManager.hpp  Material.hpp  Model.hpp  Texture.hpp
Source/include/Ramus/Assets/Loaders/: AssetLoader.hpp  MaterialLoader.hpp  ModelLoader.hpp  TextureLoader.hpp
Source/include/Ramus/Core/: CoreDefines.hpp
Source/include/Ramus/Core/ECS/: EntityHandle.hpp
Source/include/Ramus/Core/Engine/: Application.hpp  Engine.hpp  Layer.hpp  Window.hpp
Source/include/Ramus/Core/Scene/: Components.hpp  Entity.hpp  Scene.hpp
Source/include/Ramus/Core/Services/: Logger.hpp
Source/include/Ramus/Graphics/: GraphicsDefines.hpp
Source/include/Ramus/Graphics/Device/: DeviceResource.hpp  GraphicsContext.hpp  GraphicsDevice.hpp  GraphicsDeviceTypes.hpp
Source/include/Ramus/Graphics/Device/Base/: BufferBase.hpp  IndexBufferBase.hpp  ShaderBase.hpp  ShaderProgramBase.hpp  TextureBase.hpp  VertexBufferBase.hpp  xxxGraphicsDevice.hpp
Source/include/Ramus/Graphics/Device/OpenGL/: OpenGLBuffer.hpp  OpenGLContext.hpp  OpenGLDevice.hpp  OpenGLHandle.hpp  OpenGLIndexBuffer.hpp  OpenGLMesh.hpp  OpenGLShader.hpp  OpenGLShaderProgram.hpp  OpenGLStorageBuffer.hpp  OpenGLTexture.hpp  OpenGLUtils.hpp  OpenGLVertexArray.hpp  OpenGLVertexBuffer.hpp
Source/include/Ramus/Graphics/Geometry/: Mesh.hpp  Vertex.hpp
Source/include/Ramus/Graphics/Renderer/: Renderer.hpp
Source/include/Ramus/Scene/: Components.hpp  Entity.hpp
Source/include/Ramus/UI/: EditorLayer.hpp  ImGuiLayer.hpp
Source/include/Ramus/UI/Panels/: InspectorPanel.hpp  SceneHierarchyPanel.hpp
Source/include/Ramus/Utils/: FileUtils.hpp
Source/src/Assets/: AssetManager.cpp  Material.cpp  Model.cpp  Texture.cpp
Source/src/Assets/Loaders/: MaterialLoader.cpp  ModelLoader.cpp  TextureLoader.cpp
Source/src/Core/Engine/: Engine.cpp  EngineMain.cpp  Window.cpp
Source/src/Core/Scene/: Scene.cpp
Source/src/Core/Services/: Logger.cpp
Source/src/Graphics/Device/OpenGL/: OpenGLBuffer.cpp  OpenGLContext.cpp  OpenGLDevice.cpp  OpenGLIndexBuffer.cpp  OpenGLMesh.cpp  OpenGLResource.cpp  OpenGLShader.cpp  OpenGLShaderProgram.cpp  OpenGLTexture.cpp  OpenGLUtils.cpp  OpenGLVertexArray.cpp  OpenGLVertexBuffer.cpp
Source/src/Graphics/Geometry/: Mesh.cpp
Source/src/Graphics/Renderer/: Renderer.cpp
Source/src/UI/: EditorLayer.cpp  ImGuiLayer.cpp
assets/models/quixel/uncut_grass/: uncut_grass_2k.gltf
docs/: requirements.txt
docs/source/: conf.py  index.rst
greenhouse/: GreenhouseApp.cpp  main.cpp
include/Ramus/: Common.hpp
include/Ramus/Assets/: AssetManager.hpp  Material.hpp  Model.hpp
include/Ramus/Assets/Loaders/: AssetLoader.hpp  MaterialLoader.hpp  ModelLoader.hpp  TextureLoader.hpp
include/Ramus/Core/: Log.hpp  ServiceLocator.hpp  Window.hpp
include/Ramus/Core/Engine/: Engine.hpp  Window.hpp
include/Ramus/Graphics/: Buffer.hpp  GraphicsContext.hpp  GraphicsDefines.hpp  GraphicsInternal.hpp  GraphicsTypes.hpp  IndexBuffer.hpp  Mesh.hpp  Renderer.hpp  Shader.hpp  Texture.hpp  VertexArray.hpp  VertexBuffer.hpp
include/Ramus/Graphics/Geometry/: Mesh.hpp
include/Ramus/Graphics/RHI/: Buffer.hpp  GraphicsContext.hpp  GraphicsDevice.hpp  GraphicsInternal.hpp  GraphicsResource.hpp  IndexBuffer.hpp  RHITypes.hpp  VertexArray.hpp  VertexBuffer.hpp
include/Ramus/Graphics/RHI/OpenGL/: OpenGLContext.hpp  OpenGLDevice.hpp  OpenGLResource.hpp  OpenGLUtils.hpp
include/Ramus/Graphics/RHI/OpenGL/Buffers/: OpenGLBuffer.hpp  OpenGLIndexBuffer.hpp  OpenGLVertexArray.hpp  OpenGLVertexBuffer.hpp
include/Ramus/Graphics/Renderer/: Renderer.hpp
include/Ramus/Resources/: IResourceService.hpp  ModelLoader.hpp  ResourceLoader.hpp  ResourceService.hpp  ShaderLoader.hpp  TextureLoader.hpp
include/Ramus/Resources/Loaders/: IResourceLoader.hpp  ModelLoader.hpp  ShaderLoader.hpp  TextureLoader.hpp
include/ramus/: App.hpp  AppWindow.hpp  Renderer.hpp
include/ramus/Core/: App.hpp  ServiceLocator.hpp
include/ramus/Graphics/: Material.hpp  Mesh.hpp  Model.hpp  Renderer.hpp  Vertex.hpp
include/ramus/Resources/: IResourceService.hpp  ResourceService.hpp
src/: App.cpp  AppWindow.cpp  Log.cpp  Renderer.cpp  main.cpp
src/Assets/: AssetManager.cpp  Model.cpp  Texture.cpp
src/Assets/Loaders/: MaterialLoader.cpp  ModelLoader.cpp
src/Core/: App.cpp  AppWindow.cpp  Log.cpp  ServiceLocator.cpp  Window.cpp
src/Core/Engine/: Engine.cpp  EngineMain.cpp  Window.cpp
src/Core/Services/: Logger.cpp
src/Graphics/: Buffer.cpp  GraphicsContext.cpp  GraphicsDevice.cpp  Material.cpp  Mesh.cpp  Model.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  Vertex.cpp  VertexArray.cpp
src/Graphics/Geometry/: Mesh.cpp
src/Graphics/RHI/: Buffer.cpp  GraphicsContext.cpp  GraphicsDevice.cpp  VertexArray.cpp
src/Graphics/RHI/OpenGL/: OpenGLContext.cpp  OpenGLDevice.cpp  OpenGLUtils.cpp
src/Graphics/RHI/OpenGL/Buffers/: OpenGLBuffer.cpp  OpenGLIndexBuffer.cpp  OpenGLVertexArray.cpp  OpenGLVertexBuffer.cpp
src/Graphics/Renderer/: Renderer.cpp
src/Resources/: ModelLoader.cpp  ResourceService.cpp  ShaderLoader.cpp  TextureLoader.cpp
src/Resources/Loaders/: ModelLoader.cpp  ShaderLoader.cpp  TextureLoader.cpp
